--- a/config/locales/devise.en.yml
+++ b/config/locales/devise.en.yml
@@ -8,14 +8,14 @@ en:
       send_paranoid_instructions: "Si tu correo existe en nuestra base de datos, en unos minutos recibirás un correo con instrucciones sobre cómo confirmar tu cuenta."
     failure:
       already_authenticated: "Ya has iniciado sesión."
-      inactive: "Your account is not activated yet."
-      invalid: "Invalid %{authentication_keys} or password."
-      locked: "Your account is locked."
-      last_attempt: "You have one more attempt before your account is locked."
-      not_found_in_database: "Invalid %{authentication_keys} or password."
-      timeout: "Your session expired. Please sign in again to continue."
-      unauthenticated: "You need to sign in or sign up before continuing."
-      unconfirmed: "You have to confirm your email address before continuing."
+      inactive: "Tu cuenta aún no ha sido activada."
+      invalid: "Invalido %{authentication_keys} o contraseña."
+      locked: "Tu cuenta está bloqueada."
+      last_attempt: "Tienes un intento más antes de que tu cuenta sea bloqueada."
+      not_found_in_database: "Invalidado %{authentication_keys} o contraseña."
+      timeout: "Tu sesión expiró. Por favor, inicia sesión nuevamente para continuar."
+      unauthenticated: "Tienes que iniciar sesión o registrarte para poder continuar."
+      unconfirmed: "Tienes que confirmar tu cuenta para poder continuar."
     mailer:
       confirmation_instructions:
         subject: "Confirmation instructions"
